--- a/main.scss
+++ b/main.scss
@@ -1333,6 +1333,12 @@ button {
   }
 }
 
+.panel__text {
+  font-size: .7em;
+  margin-top: 1em;
+  line-height: 1.4;
+}
+
 .panel__inputs,
 .panel__settingtitle {
   display: flex;
