hopefully fix selects in windows

--- a/main.scss
+++ b/main.scss
@@ -902,9 +902,8 @@ button {
     padding: 0.25rem 1rem 0.25rem 0rem;
     background-color: transparent;
 
-    &,
     option {
-      color: var(--color-inverted);
+      color: var(--color-bg);
     }
 
     &:focus {
