--- a/index.pug
+++ b/index.pug
@@ -39,7 +39,9 @@ html(lang="en-US")
     meta(name="apple-mobile-web-app-status-bar-style" content="black-translucent")
     meta(name="theme-color" content="#212121")
 
-    link(href="https://rsms.me/inter/inter-ui.css", rel="stylesheet")
+    link(rel="preconnect", href="https://fonts.googleapis.com")
+    link(rel="preconnect", href="https://fonts.gstatic.com", crossorigin)
+    link(href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap", rel="stylesheet")
 
     link(rel="preconnect", href="https://fonts.gstatic.com")
     link(href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap", rel="stylesheet")
