feat: enhance footer styling and improve gradient handling in main styles

--- a/index.pug
+++ b/index.pug
@@ -264,7 +264,7 @@ html(lang="en-US")
 
         .footer
           article.footer__about
-            h2 FarbVélo
+            h2.title--main FarbVélo
             p.
               FarbVélo (Swiss-German for color bicycle) is a playful color picking tool. It follows simple rules and uses lots of random numbers to help you come up with pleasing color combinations or just chill while cycling through color harmonies (I almost a bit psychedelic while listening to <a href="https://mynoise.net/NoiseMachines/tropicalRainNoiseGenerator.php">custom made white noise</a>).
 
@@ -355,7 +355,7 @@ html(lang="en-US")
               or <a href="https://github.com/sponsors/meodai">recurring</a> donation
               to help me maintain FarbVélo and build more color tools.
 
-            aside.footer__about
+            //aside.footer__about
               h2 Sponsors
               ol
                 li: a(href="https://neverything.me/") Silvan Hagen (25USD/month)
