--- a/index.pug
+++ b/index.pug
@@ -298,6 +298,7 @@ html(lang="en-US")
                 li Picking ℕ0 hue's (color stops) using <a href="https://www.hsluv.org/" hreflang="en">HSLuv<a> at a user defined minimum angle ∠.
                 li Interpolating between color stops in CIE L*a*b* by default, using <a href="https://gka.github.io/chroma.js/">chroma.js</a>.
                 li Spectral interpolation using <a href="https://github.com/rvanwijnen/spectral.js">spectral.js</a>.
+                li RandomColor.js and Full Random color generation using <a href="https://github.com/darosh/colorsort-js/">colorsort-js</a>.
                 li Finding pleasing <a href="https://github.com/meodai/color-names">color names</a> using the color name <a href="https://github.com/meodai/color-names#api-">API</a>
                 li Originally released as a <a href="https://codepen.io/meodai/pen/RerqjG" hreflang="en">Codepen</a>.
                 li Source is on <a href="https://github.com/meodai/farbvelo">github</a> and licensed under a <a href="https://github.com/meodai/farbvelo/blob/main/LICENSE.md">Creative Commons Attribution Share Alike 4.0</a> license.
