fix: correct spelling errors in meta descriptions and update app description

--- a/index.pug
+++ b/index.pug
@@ -6,7 +6,7 @@ html(lang="en-US")
 
     title FarbVélo —— Random Color Cycler
     meta(name='title', content='FarbVélo —— Random Color Cycler')
-    meta(name='description', content='Generative color harmonies. The random color expolorer')
+    meta(name='description', content='Generative color harmonies. The random color explorer')
 
     link(rel="apple-touch-icon" sizes="180x180" href="./public//apple-touch-icon.png")
 
@@ -24,14 +24,14 @@ html(lang="en-US")
     meta(property='og:type', content='website')
     meta(property='og:url', content='https://farbVelo.elastiq.ch/')
     meta(property='og:title', content='FarbVélo —— Random Color Cycler')
-    meta(property='og:description', content='Generative color harmonies. The random color expolorer')
+    meta(property='og:description', content='Generative color harmonies. The random color explorer')
     meta(property='og:image', content='https://farbvelo.elastiq.ch/farbvelo.png')
 
     //  Twitter
     meta(property='twitter:card', content='summary_large_image')
     meta(property='twitter:url', content='https://farbVelo.elastiq.ch/')
     meta(property='twitter:title', content='FarbVélo —— Random Color Cycler')
-    meta(property='twitter:description', content='Generative color harmonies. The random color expolorer')
+    meta(property='twitter:description', content='Generative color harmonies. The random color explorer')
     meta(property='twitter:image', content='https://farbvelo.elastiq.ch/farbvelo.png')
 
     meta(name="viewport", content="width=device-width, initial-scale=1")
