fix: change label to div for Token Beam panel setting for improved structure

--- a/index.pug
+++ b/index.pug
@@ -330,7 +330,7 @@ html(lang="en-US")
                 svg.minibutton__icon.minibutton__icon--check
                   use(xlink:href="#icon-check")
 
-          label.panel__setting.panel__setting--tokenbeam
+          div.panel__setting.panel__setting--tokenbeam
             h4.panel__settingtitle.panel__settingtitle--tokenbeam
               span Token Beam
               button(type="button" class="panel__tokenbeam-aboutbutton" v-on:click="toggleTokenBeamAbout") About
